2002-01-31  Mark McLoughlin  <mark@skynet.ie>

	* gdk/gdkimage.c: (scratch_image_info_for_depth): make static.

	* gdk/x11/gdkimage-x11.c: (get_full_image): ditto.

	* gdk/x11/gxid_lib.[ch]: (_gxid_claim_device), (_gxid_release_device):
	renamed from gxid_(claim|release)_device.

	* gdk/x11/gdkinput-gxi.c: (_gdk_input_enable_window),
	(_gdk_input_disable_window): upd for gxid change.

	* gtk/gtkimage.c: (animation_timeout): make static.

	* gtk/gtkstyle.c: (draw_thin_shadow), (draw_spin_entry_shadow): make
	static.

	* gtk/gtktextutil.c: (bidi_menu_entries): make static.

Thu Jan 31 10:21:05 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkplug.c (gtk_plug_focus): Handle the case where
	bin->child is NULL. (#70153, Padraig O'Briain)

	* gtk/gtktextutil.c (_gtk_text_util_append_special_char_menuitems): 
	Actually call gettext() on the labels; previously they
	were marked with N_() but we never called gettext().

Wed Jan 30 20:15:49 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreestore.c (gtk_tree_store_set_valist): save last minute
	changes before committing.

	* gtk/gtkliststore.c (gtk_list_store_set_valist): ditto

Wed Jan 30 18:46:14 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkliststore.c (gtk_list_store_set_valist): only emit the
	signal if an interesting column changes.

	* gtk/gtktreestore.c: ditto.

	* gtk/gtktreeview.c (gtk_tree_view_set_cursor): change behavior so
	that it no longer grabs 

2002-01-30  Manish Singh  <yosh@gimp.org>

	* gtk/gtkhandlebox.c (gtk_handle_box_destroy): remove unused
	variable.

	* gtk/gtkwindow.c (gtk_window_get_icon): function returns a value,
	so return NULL with g_return_val_if_fail instead of g_return_if_fail.

2002-01-30  Matthias Clasen  <matthiasc@poet.de>

	* gtk/*.c: Remove excess g_return_if_fail calls from static
	and virtual functions.  (#57615)
	
2002-01-30  Anders Carlsson  <andersca@gnu.org>

	* gtk/gtkstyle.c (gtk_default_render_icon): Allow a -1 icon size.
